# FoundryAgenticDemo

./: FoundryAgenticDemo.sln  README.md  azure.yaml
.github/workflows/: create-capapility-host.yml  create-foundry-infra.yml  create-workload-infra.yml  deploy-crime-function.yml  deploy-mage-guild-api.yml
dataset/: crimes.json
documents/: AGENT.MD  CRIME.MD  INFRASTRUCTURE.md  MCP_SERVER.md
infra/: foundry.bicep  foundry.bicepparam  host.bicep  host.bicepparam  main.bicep  main.parameters.json  test.json  workloads.bicep  workloads.bicepparam
infra/modules/ai/: foundry.account.bicep  foundry.dependencies.bicep  project.bicep  project_managed_resources.bicep
infra/modules/ai/IQ/: search.bicep
infra/modules/ai/rbac/: cosmos-container-role-assignments.bicep
infra/modules/connections/: foundry.connections.bicep
infra/modules/network/: private-endpoint-dns.bicep  vnet.bicep
infra/modules/serverless/: function.bicep
infra/modules/workload/: skyrim.bicep
notebook/: create_agents.ipynb  pyproject.toml
scripts/: criminal.py  load_documents.py  penality.py  pyproject.toml
src/: .gitignore  Skyrim.slnx
src/APIS/mage-guild/: Dockerfile
src/APIS/mage-guild/src/: app.module.ts
src/APIS/mageguild/Mage.Guild.Api/: Mage.Guild.Api.csproj  Mage.Guild.Api.http  Program.cs
src/MCP/crimeMCPServer/Crime/: Crime.csproj  GetCrime.cs
src/agents/QuestAgent/: pyproject.toml
src/apis/mage-guild-api/: bootstrapper.py  dependencies.py  main.py  openapi.json  pyproject.toml
src/notebook/: knowledge_base.ipynb  pyproject.toml
(+36 files in other folders)
