[project]
name = "notebook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "azure-identity>=1.25.1",
    "azure-search-documents==11.7.0b2",
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "openai>=2.14.0",
    "requests>=2.32.5",
]
